--- a/SampleApp.RazorPages/SampleApp.RazorPages.csproj
+++ b/SampleApp.RazorPages/SampleApp.RazorPages.csproj
@@ -15,7 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Dapper.CX.SqlServer.AspNetCore\Dapper.CX.SqlServer.AspNetCore.csproj" />
-    <ProjectReference Include="..\SampleApp.Models\SampleApp.Models.csproj" />
+    <ProjectReference Include="..\SampleApp.Services\SampleApp.Services.csproj" />
   </ItemGroup>
 
   <ItemGroup>
