--- a/Dapper.CX.SqlServer.AspNetCore/Dapper.CX.SqlServer.AspNetCore.csproj
+++ b/Dapper.CX.SqlServer.AspNetCore/Dapper.CX.SqlServer.AspNetCore.csproj
@@ -10,7 +10,7 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageProjectUrl>https://github.com/adamfoneil/Dapper.CX</PackageProjectUrl>
     <RepositoryUrl>https://github.com/adamfoneil/Dapper.CX</RepositoryUrl>
-    <Version>1.2.0</Version>
+    <Version>1.2.0-beta</Version>
   </PropertyGroup>
 
   <ItemGroup>
