--- a/Tests.CrudService/Tests.CrudService.csproj
+++ b/Tests.CrudService/Tests.CrudService.csproj
@@ -7,7 +7,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="..\SampleApp.Models\Conventions\BaseTable.cs" Link="Linked\Conventions\BaseTable.cs" />
+    <Compile Include="..\SampleApp.Models\Extensions\Timestamp.cs" Link="Linked\Extensions\Timestamp.cs" />
+    <Compile Include="..\SampleApp.Models\Item.cs" Link="Linked\Item.cs" />
+    <Compile Include="..\SampleApp.Models\UserProfile.cs" Link="Linked\UserProfile.cs" />
+    <Compile Include="..\SampleApp.Models\Workspace.cs" Link="Linked\Workspace.cs" />
+    <Compile Include="..\SampleApp.Models\WorkspaceUser.cs" Link="Linked\WorkspaceUser.cs" />
+    <Compile Include="..\SampleApp.Services\Models\Item_Validate.cs" Link="Linked\Item_Validate.cs" />
+    <Compile Include="..\SampleApp.Services\Models\UserProfile_Validation.cs" Link="Linked\UserProfile_Validation.cs" />
+    <Compile Include="..\SampleApp.Services\Models\Workspace_Validation.cs" Link="Linked\Workspace_Validation.cs" />
+    <Compile Include="..\SampleApp.Services\Queries\WorkspaceUsers.cs" Link="Linked\Queries\WorkspaceUsers.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AO.ModelSync.Library" Version="2.2.3" />
+    <PackageReference Include="Dapper.QX" Version="1.0.17" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.0" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.0" />
@@ -17,7 +31,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Dapper.CX.SqlServer\Dapper.CX.SqlServer.csproj" />
-    <ProjectReference Include="..\SampleApp.Services\SampleApp.Services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Linked\Conventions\" />
+    <Folder Include="Linked\Extensions\" />
+    <Folder Include="Linked\Queries\" />
   </ItemGroup>
 
 </Project>
