--- a/Dapper.CX.SqlServer.AspNetCore/Dapper.CX.SqlServer.AspNetCore.csproj
+++ b/Dapper.CX.SqlServer.AspNetCore/Dapper.CX.SqlServer.AspNetCore.csproj
@@ -10,8 +10,8 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageProjectUrl>https://github.com/adamfoneil/Dapper.CX</PackageProjectUrl>
     <RepositoryUrl>https://github.com/adamfoneil/Dapper.CX</RepositoryUrl>
-    <Version>1.3.0</Version>
-    <PackageReleaseNotes>removed CX components to resolve ambiguities, replaced with CX package dependency</PackageReleaseNotes>
+    <Version>1.3.1</Version>
+    <PackageReleaseNotes>fixed CX.SqlServer package dependency, moved out of beta</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
@@ -21,7 +21,7 @@
   <ItemGroup>
     <PackageReference Include="AO.Models" Version="1.1.12" />
     <PackageReference Include="Dapper" Version="2.0.35" />
-    <PackageReference Include="Dapper.CX.SqlServer" Version="1.2.2-beta" />
+    <PackageReference Include="Dapper.CX.SqlServer" Version="1.3.0" />
     <PackageReference Include="Dapper.QX" Version="1.0.17" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="2.0.0" />
   </ItemGroup>
