--- a/SampleApp.Services/SampleApp.Services.csproj
+++ b/SampleApp.Services/SampleApp.Services.csproj
@@ -20,7 +20,7 @@
 
   <ItemGroup>
     <PackageReference Include="AO.Models" Version="1.1.12" />
-    <PackageReference Include="Dapper.CX.SqlServer" Version="1.2.2-beta" />
+    <PackageReference Include="Dapper.CX.SqlServer" Version="1.3.0" />
     <PackageReference Include="Dapper.QX" Version="1.0.17" />
   </ItemGroup>
 
