--- a/Dapper.CX.SqlServer/Dapper.CX.SqlServer.csproj
+++ b/Dapper.CX.SqlServer/Dapper.CX.SqlServer.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.3.1</Version>
+    <Version>1.3.2</Version>
     <Authors>Adam O'Neil</Authors>
     <Company>Adam O'Neil</Company>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
@@ -12,7 +12,7 @@
     <PackageProjectUrl>https://github.com/adamfoneil/Dapper.CX</PackageProjectUrl>
     <RepositoryUrl>https://github.com/adamfoneil/Dapper.CX</RepositoryUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageReleaseNotes>LoggedChangeTracker now with static InitializeAsync</PackageReleaseNotes>
+    <PackageReleaseNotes>supports new [NoChangeTracking] attribute</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
@@ -42,7 +42,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AO.Models" Version="1.1.12" />
+    <PackageReference Include="AO.Models" Version="1.1.13" />
     <PackageReference Include="Dapper" Version="2.0.35" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="2.0.0" />
   </ItemGroup>
