--- a/Tests.CrudService/Tests.CrudService.csproj
+++ b/Tests.CrudService/Tests.CrudService.csproj
@@ -14,8 +14,8 @@
     <Compile Include="..\SampleApp.Models\UserProfile.cs" Link="Linked\UserProfile.cs" />
     <Compile Include="..\SampleApp.Models\Workspace.cs" Link="Linked\Workspace.cs" />
     <Compile Include="..\SampleApp.Models\WorkspaceUser.cs" Link="Linked\WorkspaceUser.cs" />
-    <Compile Include="..\SampleApp.Services\Models\Item_Validate.cs" Link="Linked\Item_Validate.cs" />
-    <Compile Include="..\SampleApp.Services\Models\UserProfile_Validation.cs" Link="Linked\UserProfile_Validation.cs" />
+    <Compile Include="..\SampleApp.Services\Models\Item_ext.cs" Link="Linked\Item_ext.cs" />
+    <Compile Include="..\SampleApp.Services\Models\UserProfile_ext.cs" Link="Linked\UserProfile_ext.cs" />
     <Compile Include="..\SampleApp.Services\Models\Workspace_Validation.cs" Link="Linked\Workspace_Validation.cs" />
     <Compile Include="..\SampleApp.Services\Queries\WorkspaceUsers.cs" Link="Linked\Queries\WorkspaceUsers.cs" />
   </ItemGroup>
