--- a/Tests.CrudService/Tests.CrudService.csproj
+++ b/Tests.CrudService/Tests.CrudService.csproj
@@ -28,10 +28,13 @@
   <ItemGroup>
     <PackageReference Include="AO.ModelSync.Library" Version="2.2.3" />
     <PackageReference Include="Dapper.QX" Version="1.0.18" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
-    <PackageReference Include="MSTest.TestAdapter" Version="2.1.0" />
-    <PackageReference Include="MSTest.TestFramework" Version="2.1.0" />
-    <PackageReference Include="coverlet.collector" Version="1.2.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
+    <PackageReference Include="MSTest.TestAdapter" Version="2.1.2" />
+    <PackageReference Include="MSTest.TestFramework" Version="2.1.2" />
+    <PackageReference Include="coverlet.collector" Version="1.3.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="SqlServer.LocalDb.Testing" Version="1.0.13" />
   </ItemGroup>
 
