--- a/Dapper.CX.SqlServer.AspNetCore/Dapper.CX.SqlServer.AspNetCore.csproj
+++ b/Dapper.CX.SqlServer.AspNetCore/Dapper.CX.SqlServer.AspNetCore.csproj
@@ -10,8 +10,8 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageProjectUrl>https://github.com/adamfoneil/Dapper.CX</PackageProjectUrl>
     <RepositoryUrl>https://github.com/adamfoneil/Dapper.CX</RepositoryUrl>
-    <Version>1.3.3</Version>
-    <PackageReleaseNotes>added ColumnHistories query</PackageReleaseNotes>
+    <Version>1.3.4</Version>
+    <PackageReleaseNotes>extracted SQL builder stuff to AO.Models</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
