--- a/Dapper.CX.SqlServer/Dapper.CX.SqlServer.csproj
+++ b/Dapper.CX.SqlServer/Dapper.CX.SqlServer.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.3.7</Version>
+    <Version>1.3.8</Version>
     <Authors>Adam O'Neil</Authors>
     <Company>Adam O'Neil</Company>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
@@ -16,6 +16,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="..\Dapper.CX.Base\Abstract\DbDictionary.cs" Link="Base\Abstract\DbDictionary.cs" />
     <Compile Include="..\Dapper.CX.Base\Abstract\SqlCmdDictionary.cs" Link="Base\Abstract\SqlCmdDictionary.cs" />
     <Compile Include="..\Dapper.CX.Base\Abstract\SqlCrudProvider.cs" Link="Base\Abstract\SqlCrudProvider.cs" />
     <Compile Include="..\Dapper.CX.Base\Abstract\SqlCrudProvider_Compatibility.cs" Link="Base\Abstract\SqlCrudProvider_Compatibility.cs" />
