--- a/Dapper.CX.SqlServer.AspNetCore/Dapper.CX.SqlServer.AspNetCore.csproj
+++ b/Dapper.CX.SqlServer.AspNetCore/Dapper.CX.SqlServer.AspNetCore.csproj
@@ -10,8 +10,8 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageProjectUrl>https://github.com/adamfoneil/Dapper.CX</PackageProjectUrl>
     <RepositoryUrl>https://github.com/adamfoneil/Dapper.CX</RepositoryUrl>
-    <Version>1.3.15</Version>
-    <PackageReleaseNotes>https://github.com/adamfoneil/Dapper.CX/issues/29</PackageReleaseNotes>
+    <Version>1.5.0-beta</Version>
+    <PackageReleaseNotes></PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AO.Models" Version="1.1.24" />
+    <PackageReference Include="AO.Models" Version="1.5.0-beta" />
     <PackageReference Include="Dapper" Version="2.0.35" />
     <PackageReference Include="Dapper.CX.SqlServer" Version="1.3.15" />
     <PackageReference Include="Dapper.QX" Version="1.0.19" />
