--- a/Dapper.CX.SqlServer/Dapper.CX.SqlServer.csproj
+++ b/Dapper.CX.SqlServer/Dapper.CX.SqlServer.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.3.15</Version>
+    <Version>1.5.0-beta</Version>
     <Authors>Adam O'Neil</Authors>
     <Company>Adam O'Neil</Company>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
@@ -12,7 +12,7 @@
     <PackageProjectUrl>https://github.com/adamfoneil/Dapper.CX</PackageProjectUrl>
     <RepositoryUrl>https://github.com/adamfoneil/Dapper.CX</RepositoryUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageReleaseNotes>https://github.com/adamfoneil/Dapper.CX/issues/29</PackageReleaseNotes>
+    <PackageReleaseNotes></PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
@@ -34,6 +34,7 @@
     <Compile Include="..\Dapper.CX.Base\Exceptions\TriggerException.cs" Link="Base\Exceptions\TriggerException.cs" />
     <Compile Include="..\Dapper.CX.Base\Exceptions\ValidationException.cs" Link="Base\Exceptions\ValidationException.cs" />
     <Compile Include="..\Dapper.CX.Base\Extensions\ConnectionExtensions.cs" Link="Base\Extensions\ConnectionExtensions.cs" />
+    <Compile Include="..\Dapper.CX.Base\Interfaces\IDbDictionary.cs" Link="Base\Interfaces\IDbDictionary.cs" />
     <Compile Include="..\Dapper.CX.Base\Interfaces\ISqlCrudProvider.cs" Link="Base\Interfaces\ISqlCrudProvider.cs" />
     <Compile Include="..\Dapper.CX.Base\Interfaces\ISqlCrudService.cs" Link="Base\Interfaces\ISqlCrudService.cs" />
     <Compile Include="..\Dapper.CX.Base\Models\ColumnHistory.cs" Link="Base\Models\ColumnHistory.cs" />
@@ -41,7 +42,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AO.Models" Version="1.1.24" />
+    <PackageReference Include="AO.Models" Version="1.5.0-beta" />
     <PackageReference Include="Dapper" Version="2.0.35" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="2.0.1" />
   </ItemGroup>
