--- a/SampleApp.Models/SampleApp.Models.csproj
+++ b/SampleApp.Models/SampleApp.Models.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AO.Models" Version="1.1.24" />
+    <PackageReference Include="AO.Models" Version="1.5.0-beta" />
   </ItemGroup>
 
 </Project>
