--- a/SampleApp.Services/SampleApp.Services.csproj
+++ b/SampleApp.Services/SampleApp.Services.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AO.Models" Version="1.1.24" />
+    <PackageReference Include="AO.Models" Version="1.5.0-beta" />
     <PackageReference Include="Dapper.CX.SqlServer" Version="1.3.15" />
     <PackageReference Include="Dapper.QX" Version="1.0.19" />
   </ItemGroup>
