--- a/Dapper.CX.SqlServer/Dapper.CX.SqlServer.csproj
+++ b/Dapper.CX.SqlServer/Dapper.CX.SqlServer.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.3.22</Version>
+    <Version>1.3.23</Version>
     <Authors>Adam O'Neil</Authors>
     <Company>Adam O'Neil</Company>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
@@ -12,7 +12,8 @@
     <PackageProjectUrl>https://github.com/adamfoneil/Dapper.CX</PackageProjectUrl>
     <RepositoryUrl>https://github.com/adamfoneil/Dapper.CX</RepositoryUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageReleaseNotes>https://github.com/adamfoneil/Dapper.CX/issues/37</PackageReleaseNotes>
+    <PackageReleaseNotes>new interface IGetUser for
+https://github.com/adamfoneil/Dapper.CX/issues/38</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
@@ -42,6 +43,7 @@
     <Compile Include="..\Dapper.CX.Base\Exceptions\ValidationException.cs" Link="Base\Exceptions\ValidationException.cs" />
     <Compile Include="..\Dapper.CX.Base\Extensions\ConnectionExtensions.cs" Link="Base\Extensions\ConnectionExtensions.cs" />
     <Compile Include="..\Dapper.CX.Base\Interfaces\IDbDictionary.cs" Link="Base\Interfaces\IDbDictionary.cs" />
+    <Compile Include="..\Dapper.CX.Base\Interfaces\IGetUser.cs" Link="Base\Interfaces\IGetUser.cs" />
     <Compile Include="..\Dapper.CX.Base\Interfaces\ISqlCrudProvider.cs" Link="Base\Interfaces\ISqlCrudProvider.cs" />
     <Compile Include="..\Dapper.CX.Base\Interfaces\ISqlCrudService.cs" Link="Base\Interfaces\ISqlCrudService.cs" />
     <Compile Include="..\Dapper.CX.Base\Models\ColumnHistory.cs" Link="Base\Models\ColumnHistory.cs" />
@@ -66,6 +68,7 @@
     <Folder Include="Base\Exceptions\" />
     <Folder Include="Base\Extensions\" />
     <Folder Include="Base\Models\" />
+    <Folder Include="Base\Interfaces\" />
   </ItemGroup>
 
 </Project>
