--- a/Dapper.CX.SqlServer/Dapper.CX.SqlServer.csproj
+++ b/Dapper.CX.SqlServer/Dapper.CX.SqlServer.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.3.23</Version>
+    <Version>1.3.24</Version>
     <Authors>Adam O'Neil</Authors>
     <Company>Adam O'Neil</Company>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
@@ -12,8 +12,9 @@
     <PackageProjectUrl>https://github.com/adamfoneil/Dapper.CX</PackageProjectUrl>
     <RepositoryUrl>https://github.com/adamfoneil/Dapper.CX</RepositoryUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageReleaseNotes>new interface IGetUser for
-https://github.com/adamfoneil/Dapper.CX/issues/38</PackageReleaseNotes>
+    <PackageReleaseNotes>https://github.com/adamfoneil/Dapper.CX/issues/39</PackageReleaseNotes>
+    <AssemblyVersion>1.3.24.0</AssemblyVersion>
+    <FileVersion>1.3.24.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
