--- a/Dapper.CX.SqlServer/Dapper.CX.SqlServer.csproj
+++ b/Dapper.CX.SqlServer/Dapper.CX.SqlServer.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.3.24</Version>
+    <Version>1.3.25</Version>
     <Authors>Adam O'Neil</Authors>
     <Company>Adam O'Neil</Company>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
@@ -12,9 +12,9 @@
     <PackageProjectUrl>https://github.com/adamfoneil/Dapper.CX</PackageProjectUrl>
     <RepositoryUrl>https://github.com/adamfoneil/Dapper.CX</RepositoryUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageReleaseNotes>https://github.com/adamfoneil/Dapper.CX/issues/39</PackageReleaseNotes>
-    <AssemblyVersion>1.3.24.0</AssemblyVersion>
-    <FileVersion>1.3.24.0</FileVersion>
+    <PackageReleaseNotes>https://github.com/adamfoneil/Models/issues/6</PackageReleaseNotes>
+    <AssemblyVersion>1.3.25.0</AssemblyVersion>
+    <FileVersion>1.3.25.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -52,7 +52,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AO.Models" Version="1.1.24" />
+    <PackageReference Include="AO.Models" Version="1.1.25" />
     <PackageReference Include="Dapper" Version="2.0.35" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="2.0.1" />
   </ItemGroup>
