--- a/Dapper.CX.SqlServer.AspNetCore/Dapper.CX.SqlServer.AspNetCore.csproj
+++ b/Dapper.CX.SqlServer.AspNetCore/Dapper.CX.SqlServer.AspNetCore.csproj
@@ -10,8 +10,8 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageProjectUrl>https://github.com/adamfoneil/Dapper.CX</PackageProjectUrl>
     <RepositoryUrl>https://github.com/adamfoneil/Dapper.CX</RepositoryUrl>
-    <Version>1.3.25</Version>
-    <PackageReleaseNotes>https://github.com/adamfoneil/Models/issues/6</PackageReleaseNotes>
+    <Version>1.3.26</Version>
+    <PackageReleaseNotes>added a new services helper method AddSessionUser to simplify user profile integration</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
