--- a/Dapper.CX.SqlServer/Dapper.CX.SqlServer.csproj
+++ b/Dapper.CX.SqlServer/Dapper.CX.SqlServer.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.3.25</Version>
+    <Version>1.3.26</Version>
     <Authors>Adam O'Neil</Authors>
     <Company>Adam O'Neil</Company>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
@@ -12,9 +12,9 @@
     <PackageProjectUrl>https://github.com/adamfoneil/Dapper.CX</PackageProjectUrl>
     <RepositoryUrl>https://github.com/adamfoneil/Dapper.CX</RepositoryUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageReleaseNotes>https://github.com/adamfoneil/Models/issues/6</PackageReleaseNotes>
-    <AssemblyVersion>1.3.25.0</AssemblyVersion>
-    <FileVersion>1.3.25.0</FileVersion>
+    <PackageReleaseNotes>https://github.com/adamfoneil/Dapper.CX/issues/40</PackageReleaseNotes>
+    <AssemblyVersion>1.3.26.0</AssemblyVersion>
+    <FileVersion>1.3.26.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -44,7 +44,7 @@
     <Compile Include="..\Dapper.CX.Base\Exceptions\ValidationException.cs" Link="Base\Exceptions\ValidationException.cs" />
     <Compile Include="..\Dapper.CX.Base\Extensions\ConnectionExtensions.cs" Link="Base\Extensions\ConnectionExtensions.cs" />
     <Compile Include="..\Dapper.CX.Base\Interfaces\IDbDictionary.cs" Link="Base\Interfaces\IDbDictionary.cs" />
-    <Compile Include="..\Dapper.CX.Base\Interfaces\IGetUser.cs" Link="Base\Interfaces\IGetUser.cs" />
+    <Compile Include="..\Dapper.CX.Base\Interfaces\IOnboardUser.cs" Link="Base\Interfaces\IOnboardUser.cs" />
     <Compile Include="..\Dapper.CX.Base\Interfaces\ISqlCrudProvider.cs" Link="Base\Interfaces\ISqlCrudProvider.cs" />
     <Compile Include="..\Dapper.CX.Base\Interfaces\ISqlCrudService.cs" Link="Base\Interfaces\ISqlCrudService.cs" />
     <Compile Include="..\Dapper.CX.Base\Models\ColumnHistory.cs" Link="Base\Models\ColumnHistory.cs" />
