--- a/Dapper.CX.SqlServer.AspNetCore/Dapper.CX.SqlServer.AspNetCore.csproj
+++ b/Dapper.CX.SqlServer.AspNetCore/Dapper.CX.SqlServer.AspNetCore.csproj
@@ -10,8 +10,8 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageProjectUrl>https://github.com/adamfoneil/Dapper.CX</PackageProjectUrl>
     <RepositoryUrl>https://github.com/adamfoneil/Dapper.CX</RepositoryUrl>
-    <Version>1.3.26</Version>
-    <PackageReleaseNotes>added a new services helper method AddSessionUser to simplify user profile integration</PackageReleaseNotes>
+    <Version>1.3.27</Version>
+    <PackageReleaseNotes>https://github.com/adamfoneil/Dapper.CX/issues/40</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
@@ -21,7 +21,7 @@
   <ItemGroup>
     <PackageReference Include="AO.Models" Version="1.1.25" />
     <PackageReference Include="Dapper" Version="2.0.35" />
-    <PackageReference Include="Dapper.CX.SqlServer" Version="1.3.25" />
+    <PackageReference Include="Dapper.CX.SqlServer" Version="1.3.26" />
     <PackageReference Include="Dapper.QX" Version="1.0.20" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="2.0.1" />
   </ItemGroup>
