--- a/Dapper.CX.SqlServer.AspNetCore/Dapper.CX.SqlServer.AspNetCore.csproj
+++ b/Dapper.CX.SqlServer.AspNetCore/Dapper.CX.SqlServer.AspNetCore.csproj
@@ -10,8 +10,8 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageProjectUrl>https://github.com/adamfoneil/Dapper.CX</PackageProjectUrl>
     <RepositoryUrl>https://github.com/adamfoneil/Dapper.CX</RepositoryUrl>
-    <Version>1.3.34</Version>
-    <PackageReleaseNotes>https://github.com/adamfoneil/Dapper.CX/issues/41</PackageReleaseNotes>
+    <Version>1.3.35</Version>
+    <PackageReleaseNotes>SqlServer package version bump</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
@@ -21,8 +21,8 @@
   <ItemGroup>
     <PackageReference Include="AO.Models" Version="1.1.25" />
     <PackageReference Include="Dapper" Version="2.0.35" />
-    <PackageReference Include="Dapper.CX.SqlServer" Version="1.3.27" />
-    <PackageReference Include="Dapper.QX" Version="1.0.20" />
+    <PackageReference Include="Dapper.CX.SqlServer" Version="1.3.28" />
+    <PackageReference Include="Dapper.QX" Version="1.0.21" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="2.0.1" />
   </ItemGroup>
 
