--- a/Dapper.CX.SqlServer.AspNetCore/Dapper.CX.SqlServer.AspNetCore.csproj
+++ b/Dapper.CX.SqlServer.AspNetCore/Dapper.CX.SqlServer.AspNetCore.csproj
@@ -10,8 +10,8 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageProjectUrl>https://github.com/adamfoneil/Dapper.CX</PackageProjectUrl>
     <RepositoryUrl>https://github.com/adamfoneil/Dapper.CX</RepositoryUrl>
-    <Version>1.3.36</Version>
-    <PackageReleaseNotes>SqlServer package version bump</PackageReleaseNotes>
+    <Version>1.3.37</Version>
+    <PackageReleaseNotes>added GetAspNetUser and GetAspNetUserWIthRoles</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
