--- a/Dapper.CX.SqlServer/Dapper.CX.SqlServer.csproj
+++ b/Dapper.CX.SqlServer/Dapper.CX.SqlServer.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.3.32</Version>
+    <Version>1.3.33</Version>
     <Authors>Adam O'Neil</Authors>
     <Company>Adam O'Neil</Company>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
@@ -12,9 +12,9 @@
     <PackageProjectUrl>https://github.com/adamfoneil/Dapper.CX</PackageProjectUrl>
     <RepositoryUrl>https://github.com/adamfoneil/Dapper.CX</RepositoryUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageReleaseNotes>https://github.com/adamfoneil/Dapper.CX/issues/46</PackageReleaseNotes>
-    <AssemblyVersion>1.3.29.0</AssemblyVersion>
-    <FileVersion>1.3.29.0</FileVersion>
+    <PackageReleaseNotes>AO.Models version bump</PackageReleaseNotes>
+    <AssemblyVersion>1.3.33.0</AssemblyVersion>
+    <FileVersion>1.3.33.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
